--- a/Text1.html
+++ b/Text1.html
@@ -104,9 +104,28 @@
   <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit</button>
 </form>
+</div>
+
+<!-- Modal Bisa Digunakan dengan klik Submit-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Save changes</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Data akan disimpan dan tidak akan dimunculkan lagi
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" id="btnKirim" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
   </div>
+</div>
 </section>
 <!--akhir contact-->
 <!--Footer-->
